--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "groq-sdk": "^0.37.0",
     "openai": "^6.9.1",
     "qrcode-terminal": "^0.12.0",
